<resources>
    <string name="app_name">이거먹자</string>
    <string name="partnershipintro">
        \n ※ 본인의 매장이 아닌 다른 사람의 매장에 허가없이 홍보물을 등록할 경우 명예훼손 죄로 처벌 받을 수 있습니다 !
        \n ※ 직접 배달 매장 등록 문의는 고객센터(010-6525-3883)로 연락 바랍니다. ※
        \n-이거먹자- 제휴 및 홍보 결제 시 서비스 사항
        \n\(메뉴 1개 vip - 1500원/월 )
        \n1. -외식-음식종류 선택시 추천되는 음식에서 -주변식당- 검색 시 제휴 음식점 고유의 이미지 표출
        \n2. 지도의 이미지 표출 크기 증가
        \n2. 홍보사진 5장 등록
        \n    ->지도의 이미지 클릭 시 음식점의 기본정보 혹은 긍정적인 정보 표출 (사용자 요구가능)

\n
        \n제휴 신청 방법
        \n1. 귀하의 음식점 -인허가번호- 입력 후 확인(확인 불가 시 -이거먹자- 고객센터 연락하여 신청)
        \n2. 귀하의 음식점에 판매되는 메뉴 중 보기에 포함되는 메뉴가 있을 시 해당 메뉴 선택
        \n3. 한 메뉴당 (1500원/월) 금액 추가
        \n4. 인앱 결제 버튼 클릭
        \n5. 인앱 결제 절차 진행
        \n6. 완료
\n
        \n확인 방법
        \n1. -이거먹자- 앱 접속
        \n2. 로그인
        \n3. 개인 정보에서 제휴란에 제휴된 메뉴 클릭
        \n4. 지도에 표출된 이미지 및 클릭 정보 확인

    </string>
    <string name="pickmeal">식사음식 메뉴 선택</string>
    <string name="pickdrink">안주음식 메뉴 선택</string>
    <string name="goregistervip">약관 확인, (VIP)홍보 및 제휴 등록하기 </string>
    <string name="goregistervvip">약관 확인, 홍보 및 제휴 등록하기 </string>
    <string name="register">등록 ↑</string>
    <string name="storenum">매장 인허가 번호 입력 (정확히 입력해 주세요.)</string>
    <string name="scope">지도표츌 범위 입력 (1~10)km 기본 1km</string>
    <string name="enter">적용</string>
    <string name="agreecheck">동의</string>
    <string name="agree">약관 확인 및 동의</string>
    <string name="mypage">마이페이지</string>
    <string name="welcome">환영합니다.</string>
    <string name="meal">식사음식</string>
    <string name="drink">안주음식</string>
    <string name="menu_detail">자세히 보기</string>
    <string name="menu_delete">관심목록 제거</string>
    <string name="menu_gorecipe">레시피 보기</string>
    <string name="menu_gomap">매장 위치찾기</string>
    <string name="menu_godelivery">배달 정보보기</string>
    <string name="menu_break">제휴 해제방법</string>
    <string name="contractstore">제휴 매장</string>
    <string name="registerchange">수정 ↑</string>
    <string name="menu_change">제휴 및 홍보 수정</string>
    <string name="menu_watchimages">제휴 및 홍보 보기</string>
    <string name="mapimage">지도표출 사진 등록</string>
    <string name="adimage1">첫번째 홍보사진 등록</string>
    <string name="adimage2">두번째 홍보사진 등록</string>
    <string name="adimage3">세번째 홍보사진 등록</string>
    <string name="adimage4">네번째 홍보사진 등록</string>
    <string name="adimage5">다섯번째 홍보사진 등록</string>
    <string name="loding">로딩중입니다..</string>
    <string name="check">확인</string>
    <string name="call">전화 주문 문의</string>
    <string name="hopage">매장 홈페이지 방문</string>
    <string name="menu_contract_delete">제휴 해제</string>
    <string name="gotomypage">마이페이지</string>
    <string name="doubleclick">더블클릭을 하면 이미지 이동, 확대가 가능합니다.</string>

</resources>
